[package]
name = "dag-ali2yaml"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
csv = "1.1"
dslab-dag = { path = "../../crates/dslab-dag" }
itertools = "0.13"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
